# sokobox

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
.cache/clangd/index/: main.cpp.E1A73EEC9F3C0B7C.idx
lib/raylib/include/: README.md
lib/raylib/lib/: README.md
src/: CMakeLists.txt  main.cpp
src/util/: typedef.hpp  util.cpp  util.hpp
src/view/: actionmgr.cpp  actionmgr.hpp  atlas.hpp  atlasmgr.hpp  isomgr.hpp  isotf.hpp  isoview.hpp  linearcam.hpp  playermgr.cpp  playermgr.hpp  smoothcam.hpp  worldstate.cpp  worldstate.hpp  worldview.cpp  worldview.hpp
static/: sokobox.ini
static/res/: LICENSE  a_items.rgb5a1.dds  graphics.rgb5a1.dds  player.rgb5a1.dds  s_items.rgb5a1.dds
